--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,10 +18,12 @@
     "babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "froala-editor": "^4.5.0",
     "lucide-react": "^0.474.0",
     "next": "15.1.5",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
+    "react-froala-wysiwyg": "^4.5.0",
     "tailwind-merge": "^3.0.1",
     "tailwindcss-animate": "^1.0.7"
   },
