--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "froala-editor": "^4.5.0",
+    "lottie-web": "^5.12.2",
     "lucide-react": "^0.474.0",
     "next": "15.1.5",
     "react": "^19.0.0",
