--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,10 +14,12 @@
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-separator": "^1.1.2",
     "@radix-ui/react-slot": "^1.1.1",
+    "@types/formidable": "^3.4.5",
     "axios": "^1.7.9",
     "babel-plugin-react-compiler": "^19.0.0-beta-27714ef-20250124",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
+    "formidable": "^3.5.2",
     "froala-editor": "^4.5.0",
     "lottie-web": "^5.12.2",
     "lucide-react": "^0.474.0",
