--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -105,6 +105,22 @@
 			<scope>runtime</scope>
 		</dependency>
 
+		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/s3 -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>s3</artifactId>
+			<version>2.30.25</version>
+<!--			<scope>test</scope>-->
+		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/apache-client -->
+		<dependency>
+			<groupId>software.amazon.awssdk</groupId>
+			<artifactId>aws-core</artifactId>
+			<version>2.30.25</version>
+<!--			<scope>test</scope>-->
+		</dependency>
+
 
 	</dependencies>
 
