--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,5 +41,12 @@
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
+  },
+
+"overrides": {
+  "react-froala-wysiwyg": {
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0"
   }
+}
 }
