--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -106,20 +106,20 @@
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/s3 -->
-		<dependency>
-			<groupId>software.amazon.awssdk</groupId>
-			<artifactId>s3</artifactId>
-			<version>2.30.25</version>
-<!--			<scope>test</scope>-->
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>software.amazon.awssdk</groupId>-->
+<!--			<artifactId>s3</artifactId>-->
+<!--			<version>2.30.25</version>-->
+<!--&lt;!&ndash;			<scope>test</scope>&ndash;&gt;-->
+<!--		</dependency>-->
 
 		<!-- https://mvnrepository.com/artifact/software.amazon.awssdk/apache-client -->
-		<dependency>
-			<groupId>software.amazon.awssdk</groupId>
-			<artifactId>aws-core</artifactId>
-			<version>2.30.25</version>
-<!--			<scope>test</scope>-->
-		</dependency>
+<!--		<dependency>-->
+<!--			<groupId>software.amazon.awssdk</groupId>-->
+<!--			<artifactId>aws-core</artifactId>-->
+<!--			<version>2.30.25</version>-->
+<!--&lt;!&ndash;			<scope>test</scope>&ndash;&gt;-->
+<!--		</dependency>-->
 
 
 	</dependencies>
